--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.27.2",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
